# config/swagger.yaml
@@ -603,6 +603,29 @@ paths:
           type: string
           description: ''
           required: true
+  /report/m/view_history/{empId}:
+    get:  
+      summary: View report data by employee(M)
+      tags:
+        - Result data
+      description: View report data (M)
+      consumes: 
+        - application/json
+      produces: 
+        - application/json
+      security:
+        - bearerAuth: []
+      responses:
+        '200': 
+          description: success
+        '400': 
+          description: Bad request
+      parameters:
+        - in: path
+          name: empId
+          type: string
+          description: ''
+          required: true
   /report/p/get_infected:
     get:
       summary: List infected people (P)
